Add runtime and db clearing api
